istio/test-secure-gateway-httpbin/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-system/httpbin-credential # must be the same as secret
    hosts:
    - httpbin.example.com
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    hosts:
#    - httpbin.inv.gov.ar
